--- a/index.css
+++ b/index.css
@@ -77,7 +77,7 @@ body {
   width: 100%;
   height: auto;
   background-color: white;
-  display: flex;
+  display: none;
   align-items: center;
   justify-content: space-evenly;
   padding: 2% 0px 2% 0px;
@@ -104,7 +104,7 @@ body {
   text-align: center;
   padding: 0px;
   margin: 2% 0px 2% 0px;
-  line-height: 2rem;
-  font-size: 1.2rem;
+  line-height: 2.5rem;
+  font-size: 1.4rem;
 }
 /*footer*/
