--- a/index.css
+++ b/index.css
@@ -1,17 +1,14 @@
 /* 스마트폰 (가로 및 세로) ----------- */
 @media (max-device-width: 768px) and (max-width: 768px) {
-  body {
-    width: 100vw;
-    margin: 0px;
+  .menubox a {
+    font-size: 1rem !important;
   }
-  .content1box {
-    margin: 0px 10px 0px 10px;
-  }
-  .content1ul {
-    font-size: 11px;
+  .menubox a:hover {
+    box-shadow: none !important;
   }
   .footertext {
-    font-size: 10px;
+    font-size: 0.8rem !important;
+    line-height: 1.5rem !important;
   }
 }
 
@@ -22,13 +19,13 @@ body {
 }
 
 /*header*/
-.header {
+.header0 {
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-.header a {
+.header0 a {
   text-decoration: none;
   padding: 0px;
   margin: 3% 3% 0% 3%;
